--- a/Word2Vec_Example.ipynb
+++ b/Word2Vec_Example.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1tLYoDI3VtCPirGrOjESHhxE23SywsJUT",
-      "authorship_tag": "ABX9TyOQTJxQMxpjN3zA6S1mVm9i",
+      "authorship_tag": "ABX9TyPW3lS+QpjPDRggFU3JZ02B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,16 +138,19 @@
       "source": [
         "story = []\n",
         "for filename in os.listdir('data'):\n",
-        "    with open(os.path.join('data', filename), encoding=\"utf-8\", errors=\"ignore\") as f:\n",
-        "        corpus = f.read()\n",
-        "    raw_sent = sent_tokenize(corpus)\n",
-        "    for sent in raw_sent:\n",
-        "        story.append(simple_preprocess(sent))"
+        "\n",
+        "  with open(os.path.join('data', filename), encoding='utf-8', errors=\"ignore\") as f:\n",
+        "    corpus = f.read()\n",
+        "  tokenized_data = sent_tokenize(corpus)\n",
+        "  for i in tokenized_data:\n",
+        "    story.append(simple_preprocess(i))\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "7jSEvROr57fx"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -160,9 +163,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-b2lBkHX7Xmh",
-        "outputId": "462884a3-db91-4faf-c3e7-aa7bdc7daf99"
+        "outputId": "de5dc6e7-2a3b-4b41-e4b5-3de283664b2c"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +175,243 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for item in story[:5]:\n",
+        "  print(item)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cLvf9U7t8d2I",
+        "outputId": "17e6ea13-a3d4-43f5-d147-cc28cd99647b"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['game', 'of', 'thrones', 'book', 'one', 'of', 'song', 'of', 'ice', 'and', 'fire', 'by', 'george', 'martin', 'prologue', 'we', 'should', 'start', 'back', 'gared', 'urged', 'as', 'the', 'woods', 'began', 'to', 'grow', 'dark', 'around', 'them']\n",
+            "['the', 'wildlings', 'are', 'dead']\n",
+            "['do', 'the', 'dead', 'frighten', 'you']\n",
+            "['ser', 'waymar', 'royce', 'asked', 'with', 'just', 'the', 'hint', 'of', 'smile']\n",
+            "['gared', 'did', 'not', 'rise', 'to', 'the', 'bait']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# MODEL CONFIGURATION\n",
+        "\n",
+        "model = gensim.models.Word2Vec(\n",
+        "    window=10,\n",
+        "    min_count=2\n",
+        ")                # Word2VEC IS CLASS UNDER GENSIM"
+      ],
+      "metadata": {
+        "id": "GvRqmOI_AO-N"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.build_vocab(story)   # There are many words in our corpus, so will extract unique words using build_vocab (story has whole corpus)"
+      ],
+      "metadata": {
+        "id": "A02H0eT1BO6i"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.train(story, total_examples=model.corpus_count, epochs=model.epochs)   # total_examples means how many sentences are there in our corpus"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P1ACXLUkCBwU",
+        "outputId": "f76cd66d-b6d7-4191-c7ef-7d06c7ad6b78"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:gensim.models.word2vec:Effective 'alpha' higher than previous training cycles\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(6573939, 8625265)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Will now access word2vec model using\n",
+        "model.wv.most_similar('dragon')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qbz5C_5HCXwj",
+        "outputId": "6777307a-a376-411b-a8df-154b9a4738f7"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('dragons', 0.689274251461029),\n",
+              " ('daenerys', 0.550575315952301),\n",
+              " ('targaryen', 0.5202918648719788),\n",
+              " ('dynasty', 0.5016844272613525),\n",
+              " ('aegon', 0.48817580938339233),\n",
+              " ('valyria', 0.4841756224632263),\n",
+              " ('cities', 0.47992372512817383),\n",
+              " ('crown', 0.47895321249961853),\n",
+              " ('qarth', 0.47689926624298096),\n",
+              " ('sea', 0.47429555654525757)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.wv.most_similar('king')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ClcvX3_DMNa",
+        "outputId": "6cb7f21d-6645-48db-e225-ad0c18b2a08b"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('kings', 0.8176556825637817),\n",
+              " ('baratheon', 0.653322160243988),\n",
+              " ('realm', 0.5966665744781494),\n",
+              " ('tourney', 0.5621440410614014),\n",
+              " ('usurper', 0.5537251830101013),\n",
+              " ('royal', 0.5288586616516113),\n",
+              " ('prince', 0.522528350353241),\n",
+              " ('throne', 0.520402729511261),\n",
+              " ('targaryen', 0.5045199990272522),\n",
+              " ('myrcella', 0.49936115741729736)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.wv['dragon']   # vector representation of dragon"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xiwlSEnVDeEr",
+        "outputId": "9085fce1-cfe1-41d6-9ed0-eaaa856ad14f"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 8.3619982e-01, -1.0961348e-01,  1.8092573e+00,  2.2220619e+00,\n",
+              "       -8.8090003e-01, -2.1085714e-01, -1.4759558e+00,  1.0188476e-01,\n",
+              "       -9.3151772e-01,  2.8333485e-01, -1.8044300e+00, -1.8012588e+00,\n",
+              "       -5.9202641e-02, -1.6800739e+00, -1.5061550e+00, -9.0507883e-01,\n",
+              "        4.3989295e-01, -8.5661238e-01, -1.3858144e-01,  6.3032681e-01,\n",
+              "        1.4718120e+00,  3.8877100e-01,  2.9802666e+00, -1.7715710e+00,\n",
+              "        4.9492300e-01,  9.0869004e-01,  6.2239927e-01,  7.0318693e-01,\n",
+              "       -1.4216547e+00, -7.4459273e-01, -2.1641742e-01,  1.5393775e+00,\n",
+              "        9.1186887e-01, -7.9496258e-01,  1.8798729e+00,  1.3908559e-01,\n",
+              "        1.1280874e+00,  9.4658524e-01, -9.0622282e-01,  1.5837696e+00,\n",
+              "       -1.6111995e+00,  6.8317658e-01, -1.7933718e+00, -1.2810235e+00,\n",
+              "        1.4048547e+00, -5.3423256e-02,  5.6482154e-01,  1.6539702e+00,\n",
+              "        4.1327760e-01, -1.0642174e+00,  1.1023794e+00,  1.8966563e+00,\n",
+              "       -1.4628108e-01,  7.5264350e-02,  5.4803669e-01, -3.6737207e-01,\n",
+              "        4.8849741e-01, -5.1634091e-01,  4.0906993e-01, -1.2901512e-01,\n",
+              "        5.8854413e-01,  1.4189256e+00, -4.6781492e-01, -1.1722630e+00,\n",
+              "       -9.0593910e-01,  6.7713358e-02, -1.6932640e+00,  7.9658967e-01,\n",
+              "       -1.3859091e+00, -1.1076142e+00, -1.2103533e+00, -5.9255654e-01,\n",
+              "        1.5509576e+00,  5.6820697e-01, -7.4671203e-01,  9.9799130e-03,\n",
+              "        1.6054326e+00, -2.2580674e+00,  4.2364714e-01,  8.3673373e-02,\n",
+              "       -9.5287430e-01, -1.6443196e-01,  2.8890285e+00, -1.0029067e+00,\n",
+              "       -1.1314516e+00, -2.2472773e-01,  6.0149342e-02,  1.8297582e+00,\n",
+              "       -3.2127011e-01, -7.5201266e-02,  1.1076506e+00,  8.3026522e-01,\n",
+              "        8.0030245e-01, -2.4302879e-01, -1.6580443e+00,  2.5522059e-01,\n",
+              "        2.1080685e-05,  1.3474809e+00, -6.5195519e-01,  1.6109976e+00],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.wv.similarity('king', 'queen')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r00RkrxUDnIc",
+        "outputId": "70cb6256-26e7-41df-cb36-95103247b0b6"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float32(0.42793256)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
         }
       ]
     },
@@ -180,7 +419,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "cLvf9U7t8d2I"
+        "id": "tyX17-BpDx8j"
       },
       "execution_count": null,
       "outputs": []
